# dartrs

./: .gitignore  Cargo.toml  README.md  pyproject.toml
.github/workflows/: CI.yml
examples/: main.py  simple.py
python/dartrs/: __init__.py  dartrs.pyi  lib.py  utils.py  v2.py
src/: bindings.rs  configs.rs  generate.rs  generation.rs  lib.rs  logits_processor.rs  main.rs  models.rs  polyfill.rs  prompt.rs  tags.rs
src/bindings/: generation.rs  models.rs  prompt.rs  tags.rs
src/cli/: Cargo.toml  README.md
src/cli/src/: main.rs
src/models/: mistral.rs  mixtral.rs
tests/: test_configs.py  test_model.py  test_prompt.py  test_tokenizer.py  test_v2.py
