[package]
name = "danbooru-tags-transformer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
candle-core = { git = "https://github.com/huggingface/candle.git", version = "0.5.0", features = [
    "cuda",
] }
candle-kernels = { git = "https://github.com/huggingface/candle.git", version = "0.5.0" }
candle-nn = { git = "https://github.com/huggingface/candle.git", version = "0.5.0", features = [
    "cuda",
] }
candle-transformers = { git = "https://github.com/huggingface/candle.git", version = "0.5.0", features = [
    "cuda",
] }
clap = { version = "4.5.4", features = ["derive"] }
hf-hub = "0.3.2"
rand = "0.8.5"
serde = "1.0.199"
serde_json = "1.0.116"
tokenizers = "0.19.1"
