[package]
name = "danbooru-tags-transformer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "dartrs"
crate-type = ["cdylib", "lib"]

[[bin]]
name = "dartrs"
path = "src/bin/cli.rs"


[dependencies]
anyhow = "1.0.82"
candle-core = { git = "https://github.com/huggingface/candle.git", version = "0.5.0" }
candle-nn = { git = "https://github.com/huggingface/candle.git", version = "0.5.0" }
candle-transformers = { git = "https://github.com/huggingface/candle.git", version = "0.5.0" }
clap = { version = "4.5.4", features = ["derive"] }
hf-hub = "0.3.2"
rand = "0.8.5"
serde = "1.0.199"
serde_json = "1.0.116"
tokenizers = "0.19.1"
pyo3 = { version = "0.21.2", features = ["extension-module"] }
cedar-policy = "3.1.3"

[features]
default = []
cuda = ["candle-core/cuda", "candle-nn/cuda", "candle-transformers/cuda"]
