[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "dartrs"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
version = "0.1.1"
description = ""
authors = [{ name = "Plat", email = "contact@p1at.dev" }]
dependencies = []
readme = "README.md"
license = { text = "Apache-2.0" }

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "dartrs.dartrs"

[tool.pdm.dev-dependencies]
dev = ["pytest>=8.2.0", "pytest-icdiff>=0.9"]
