[package]
name = "dartrs-cli"
version = "0.1.0"
edition = "2021"


[dependencies]

dartrs = { path = "../../" }
anyhow = "1.0.82"
candle-core = { git = "https://github.com/huggingface/candle.git", version = "0.5.0" }
hf-hub = "0.3.2"
clap = { version = "4.5.4", features = ["derive"] }

[features]
default = []
